--- a/Cabezon_FB_RF.Rmd
+++ b/Cabezon_FB_RF.Rmd
@@ -31,7 +31,7 @@ Edit Fishbrain data
 ```{r}
 fish_ca <- fishbrain %>% 
   filter(latitude > 34.45) %>% 
-   mutate(district = case_when(latitude > 34.45 & latitude < 37.18 ~ 'Central',
+  mutate(district = case_when(latitude > 34.45 & latitude < 37.18 ~ 'Central',
                               latitude >= 37.18 & latitude < 38.91 ~ 'Bay Area',
                               latitude > 38.91 & latitude < 40.44 ~ 'Wine',
                               latitude > 40.44 ~ 'Redwood')) %>% 
@@ -41,7 +41,7 @@ fish_ca <- fishbrain %>%
   mutate_at(vars(district), as.factor) %>% 
   mutate(Sex = "F") %>% 
   mutate(district = fct_relevel(district, c("Central", "Bay Area", "Wine", "Redwood")))
-View(fish_ca)
+#View(fish_ca)
 ```
 
 Edit RecFIN Data
@@ -59,7 +59,7 @@ recfin_ca <- recfin_bio %>%
   mutate(district = fct_relevel(district, c("Central", "Bay Area", "Wine", "Redwood"))) %>% 
   mutate(recfin_length_cm = RECFIN_LENGTH_MM / 10) %>% 
   mutate(Sex = "F")
-View(recfin_ca)
+#View(recfin_ca)
 ```
 
 Count by district
@@ -171,6 +171,38 @@ cb_gis %>%
   scale_x_reverse() + 
   ylim(0, 8) + 
   labs(x = "Depth (m)", y = "Weight (kg)")
+```
+
+Add mode column
+```{r}
+cb_md <- cb_gis %>% 
+  mutate(fishing_mode = case_when(distance_land <= 115 ~ 'Shore/Jetty',
+                                  distance_land > 115 ~ 'Boat'))
+View(cb_md)
+
+recfin_md <- recfin_ca %>% 
+  mutate(recfin_mode = case_when(grepl("BOATS", RECFIN_MODE_NAME) ~ 'Boat',
+                                 grepl("JETTY", RECFIN_MODE_NAME) ~ 'Shore/Jetty',
+                                 grepl("BEACH", RECFIN_MODE_NAME) ~ 'Shore/Jetty'
+                                   ))
+View(recfin_md)
+```
+
+Fishing Mode Plots
+```{r}
+#Fishbrain
+cb_md %>% 
+  ggplot(aes(fishing_mode, fill = fishing_mode)) +
+  geom_bar() + 
+  labs(x = "Fishing Mode", y = "Count") +
+  theme(legend.position = "none")
+
+#RecFIN
+recfin_md %>% 
+  ggplot(aes(recfin_mode, fill = recfin_mode)) +
+  geom_bar() +
+  labs(x = "Fishing Mode", y = "Count") +
+  theme(legend.position = "none")
 ```
 
 Density plots
